Casi terminado, a falta de revisar.

--- a/memoria.tex
+++ b/memoria.tex
@@ -204,32 +204,32 @@ Dado que no se estaba en el laboratorio cuando se terminó de diseñar este puls
     \end{figure}
 
 
-\begin{table}[H]
-\caption{20 primeras líneas del archivo de datos exportado}
-\begin{center}
-	\begin{tabular}
-	\hline
-	\textbf{Samples - X-Axis} & \textbf{Acceleration (g) - X-Axis} \\ \hline
-	979                       & 157715,00                          \\ \hline
-	980                       & 151367,00                          \\ \hline
-	981                       & 145996,00                          \\ \hline
-	982                       & 145020,00                          \\ \hline
-	983                       & 146484,00                          \\ \hline
-	984                       & 146484,00                          \\ \hline
-	985                       & 147461,00                          \\ \hline
-	986                       & 149902,00                          \\ \hline
-	987                       & 153809,00                          \\ \hline
-	988                       & 154785,00                          \\ \hline
-	989                       & 151855,00                          \\ \hline
-	990                       & 148438,00                          \\ \hline
-	991                       & 148926,00                          \\ \hline
-	992                       & 150391,00                          \\ \hline
-	993                       & 150391,00                          \\ \hline
-	994                       & 150879,00                          \\ \hline
-	995                       & 151367,00                          \\ \hline
-	996                       & 151367,00                          \\ \hline
-	997                       & 151855,00                          \\ \hline
-\end{tabular}
-\end{center}
-\end{table}
+    \begin{table}[H]
+        \caption{Veinte líneas Excel}
+        \begin{center}
+            \begin{tabular}{|c|c|}
+                \hline
+                \textbf{Samples - X-Axis} & \textbf{Acceleration (g) - X-Axis} \\ \hline
+                979                       & 157715,00                          \\ \hline
+                980                       & 151367,00                          \\ \hline
+                981                       & 145996,00                          \\ \hline
+                982                       & 145020,00                          \\ \hline
+                983                       & 146484,00                          \\ \hline
+                984                       & 146484,00                          \\ \hline
+                985                       & 147461,00                          \\ \hline
+                986                       & 149902,00                          \\ \hline
+                987                       & 153809,00                          \\ \hline
+                988                       & 154785,00                          \\ \hline
+                989                       & 151855,00                          \\ \hline
+                990                       & 148438,00                          \\ \hline
+                991                       & 148926,00                          \\ \hline
+                992                       & 150391,00                          \\ \hline
+                993                       & 150391,00                          \\ \hline
+                994                       & 150879,00                          \\ \hline
+                995                       & 151367,00                          \\ \hline
+                996                       & 151367,00                          \\ \hline
+                997                       & 151855,00                          \\ \hline
+        \end{tabular}
+        \end{center}
+        \end{table}
 \end{document}
